package lv.javaguru.homeworks.gravitrips;

public enum TypesOfPlayers {HUMAN, COMPUTER}

